# hermes-topic-detect

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_TH.md  __init__.py  agent_loader.py  agent_patch.diff  classifier.py  config.py  config_reader.py  install.sh  patch_agent.py  patch_run_agent.py  plugin.yaml  pyproject.toml  semantic.py  signature.py  state.py  test_signature_finalize.py  test_v2_classifier.py  update_checker.py
.github/workflows/: test.yml
docs/: FALLBACK_CHAINS.md  REPO_LAYOUT.md  SIGNATURE_FLOW.md  V2_REWRITE_PLAN.md  V3_SMART_ROUTER.md
tests/: test_fallback_config.py  test_signature_finalize.py  test_skipdetect.py  test_v2_classifier.py
